@startuml

title __DAOWITHDB-TABLEDATA's Class Diagram__\n

  namespace  {
    namespace om.example.demodao {
      namespace Controller {
        class com.example.demodao.Controller.MenuController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.demodao {
      namespace Controller {
        class com.example.demodao.Controller.SysController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.demodao {
      namespace Controller {
        class com.example.demodao.Controller.TeachController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.demodao {
      namespace DAO {
        interface com.example.demodao.DAO.DAO {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.demodao {
      namespace DAO {
        class com.example.demodao.DAO.DAOImpl {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.demodao {
      namespace DAO {
        class com.example.demodao.DAO.ListP {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.demodao {
      class com.example.demodao.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.demodao {
      class com.example.demodao.RoomData {
      }
    }
  }
  

  com.example.demodao.Controller.MenuController .up.|> javafx.fxml.Initializable
  com.example.demodao.Controller.SysController .up.|> javafx.fxml.Initializable
  com.example.demodao.Controller.SysController o-- com.example.demodao.DAO.DAO : interDao
  com.example.demodao.Controller.SysController o-- com.example.demodao.DAO.ListP : lt
  com.example.demodao.Controller.TeachController .up.|> javafx.fxml.Initializable
  com.example.demodao.Controller.TeachController o-- com.example.demodao.DAO.DAO : dao
  com.example.demodao.Controller.TeachController o-- com.example.demodao.DAO.DAO : interDao
  com.example.demodao.Controller.TeachController o-- com.example.demodao.DAO.ListP : lt
  com.example.demodao.DAO.DAOImpl .up.|> com.example.demodao.DAO.DAO
  com.example.demodao.DAO.ListP .up.|> com.example.demodao.DAO.DAO
  com.example.demodao.HelloApplication -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
